# imageviewer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
App/: FileDialog.cpp  FileDialog.hpp  ImageViewer  ImageViewer.cpp  Validate.cpp  Validate.hpp
Tests/: Tests.cpp
